--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,33 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Multiple Shapes</title>
+</head>
+
+<body>
+    <div class="top-container">
+        <div class="left-box">
+    
+        </div>
+        <div class="center-box">
+
+        </div>
+        <div class="right-circle">
+
+        </div>
+    </div>
+    <div class="middle-container">
+        <div class ="middle-container-shadow">
+
+        </div>
+    </div>
+    <div class="bottom-container">
+        <h1>HELLO FRIENDS!!!</h1>
+    </div> 
+</body>
+</html>
