--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,28 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Project 3</title>
+</head>
+
+<body>
+    <div class="container-1">
+        <div class="square-box"></div>
+    </div>
+
+    <div class="text-container">
+        <span class="text-span">
+            Consider hiding the status bar -- and all other app UI -- while people are actively viewing full-screen media. If you hide the status bar, be sure to let people retrieve it ( and the appropriate app UI ) with a single tap. Unless you have a compelling reason to do so, avoid defining a custom gesture to redisplay the status bar because users are unlikely to discover such a gesture or to remember it.
+        </span>
+    </div>
+
+    <div class="container-2"></div>
+    <div class="container-3"></div>
+    <div class="container-4"></div>
+    <div class="container-5"></div>
+</body>
+</html>
